[docker] remove notebooks